--- a/excersive-review/product/src/app/product-homepage/list-product/list-product.component.html
+++ b/excersive-review/product/src/app/product-homepage/list-product/list-product.component.html
@@ -1,6 +1,3 @@
-<!--<div>-->
-<!--  <button class="btn btn-success" (click)="showCreatForm()">Add New</button>-->
-<!--</div>-->
 
 <div class="container ">
   <div class="row">
@@ -19,11 +16,10 @@
             <th>Date</th>
             <th>Status</th>
             <th>Origin</th>
-            <th>Options</th>
           </tr>
           </thead>
           <tbody>
-          <tr *ngFor="let pro of productList,let i=index">
+          <tr *ngFor="let pro of productList,let i=index" (click)="showDetailProduct(pro)">
             <td>{{i + 1}}</td>
             <td>{{pro.id}}</td>
             <td>{{pro.name|titlecase}}</td>
@@ -47,7 +43,7 @@
     </div>
     <div class="col-6">
       <app-show-detail-product [product]="productDetail"  ></app-show-detail-product>
-
+      <app-create-product (productNew)="addNew($event)"  ></app-create-product>
     </div>
   </div>
 </div>
