--- a/excersive-review/product/src/app/product-homepage/list-product/show-detail-product/show-detail-product.component.html
+++ b/excersive-review/product/src/app/product-homepage/list-product/show-detail-product/show-detail-product.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="productDetail">
+<div *ngIf="productDetail.quantity > 0 ; else elseEdit">
   <h1 style="color: teal" class="text-uppercase mb-5">view product</h1>
   <table class="table table-hover">
     <tbody>
@@ -26,11 +26,12 @@
       <th>Origin</th>
       <td>{{productDetail.origin}}</td>
     </tr>
-    <tr>
-<!--      <td *ngIf="productDetail.quantity == 0">-->
-<!--        <button class="btn btn-warning" (click)="editProduct()">Update Quantity</button>-->
-<!--      </td>-->
-    </tr>
     </tbody>
   </table>
 </div>
+<ng-template #elseEdit>
+  <td >
+    <input type="number" #add>
+    <button class="btn btn-warning" (click)="editProduct(productDetail,add.value)">Update Quantity</button>
+  </td>
+</ng-template>
