--- a/reactFrom-service-excersives-review/product/src/app/product-homepage/list-product/list-product.component.html
+++ b/reactFrom-service-excersives-review/product/src/app/product-homepage/list-product/list-product.component.html
@@ -5,7 +5,7 @@
       <div class="card border-primary">
         <h1>List Product</h1>
         <div class="card-body">
-          <div *ngIf="productList.length!=0 ;else nodata">
+          <div *ngIf="productList.length ;else nodata">
             <table class="table-primary">
               <thead>
               <tr>
