--- a/reactFrom-service-excersives-review/product/src/app/product-homepage/show-detail-product/show-detail-product.component.html
+++ b/reactFrom-service-excersives-review/product/src/app/product-homepage/show-detail-product/show-detail-product.component.html
@@ -30,8 +30,8 @@
   </table>
 </div>
 <ng-template #elseEdit>
-<!--  <td >-->
-<!--    <input type="number" #add>-->
-<!--    <button class="btn btn-warning" (click)="editProduct(product,add.value)">Update Quantity</button>-->
-<!--  </td>-->
+  <td >
+    <input type="number" #add>
+    <button class="btn btn-warning" (click)="editProduct(product,add.value)">Update Quantity</button>
+  </td>
 </ng-template>
