--- a/reactFrom-service-excersives-review/product/src/app/product-homepage/create-product/create-product.component.html
+++ b/reactFrom-service-excersives-review/product/src/app/product-homepage/create-product/create-product.component.html
@@ -3,10 +3,10 @@
     <h3>Create new <b style="color: green">Product </b></h3>
     <form [formGroup]="rfProduct" (ngSubmit)="onSubmit()">
     <div class="card-body">
-      <div class="form-group">
-        <label >ID</label>
-        <input type="text" class="form-control" formControlName="id">
-      </div>
+<!--      <div class="form-group">-->
+<!--        <label >ID</label>-->
+<!--        <input type="hidden" class="form-control" formControlName="id">-->
+<!--      </div>-->
       <div class="form-group">
         <label >Name</label>
         <input type="text" class="form-control" formControlName="name">
